<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    tools:background="@color/c_black_9">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/AppTheme.CardView.Transparent.5dp"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:layout_marginBottom="@dimen/layout_margin_5dp"
        android:clickable="false"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintDimensionRatio="@string/play_list_item_dimension_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePoster"
            style="@style/AppTheme.Widget.ImageView.CenterCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textNowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/c_black_4"
            android:gravity="center"
            android:padding="@dimen/size_10dp"
            android:text="@string/now_playing"
            android:textColor="@color/c_p_white_1"
            android:textSize="@dimen/font_12sp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTagNew"
            style="@style/TextTagNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_12dp"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        style="@style/AppTheme.TextMedium"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textDescription"
        style="@style/AppTheme.TextBodyRegular"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="@integer/description_max_line"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>
