<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enrichtv.android.player.ui.player.PlayerActivity">

    <com.mobiotics.player.exo.ui.ExoPlayerView
        android:id="@+id/exoPlayerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/mob_player_control_view"
        app:fastforward_increment="@integer/fast_forward_increment"
        app:resize_mode="zoom"
        app:rewind_increment="@integer/rewind_increment"
        app:show_buffering="always" />

    <com.mobiotics.player.core.ui.AutoPlayView
        android:id="@+id/autoPlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:enable_replay="true"
        app:max_duration="@integer/auto_play_max_duration" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextEpisodeImageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageContainer"
            style="@style/AppTheme.CardView.Transparent.Download"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                style="@style/AppTheme.Widget.ImageView.CenterCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster"
                tools:foreground="@color/c_gray_13"
                tools:src="@tools:sample/backgrounds/scenic" />


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePlayIcon"
            style="@style/AppTheme.Borderless.Play.White"
            android:layout_width="@dimen/layout_size_25dp"
            android:layout_height="@dimen/layout_size_25dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imageContainer"
            app:layout_constraintEnd_toEndOf="@+id/imageContainer"
            app:layout_constraintStart_toStartOf="@+id/imageContainer"
            app:layout_constraintTop_toTopOf="@+id/imageContainer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNextEpisodeHeader"
            style="@style/AppTheme.TextHeader1Medium.12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_8dp"
            android:text=""
            app:layout_constraintEnd_toStartOf="@id/imageContainer"
            app:layout_constraintBottom_toTopOf="@id/txtNextTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNextTitle"
            style="@style/AppTheme.TextHeader1Medium.14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_8dp"
            android:text="S1 E4 : Pati Ka Sauda"
            app:layout_constraintEnd_toStartOf="@id/imageContainer"
            app:layout_constraintBottom_toBottomOf="@id/imageContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.mobiotics.player.core.ui.playlist.PlayListView
        android:id="@+id/playListView"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textFingerPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="@integer/fingerprint_alpha"
        android:textColor="@color/c_white_1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSkipIntro"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_margin="@dimen/layout_margin_40dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:layoutDirection="locale"
        android:text="@string/skip_intro"
        android:textAllCaps="false"
        android:fontFamily="@font/gotham_bold"
        android:textColor="@color/c_p_text_regular_1"
        android:textSize="@dimen/text_size_12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/nextEpisodeBtnLayout"
        layout="@layout/progress_button_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_margin="@dimen/layout_margin_40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageWatermarkBottom"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_watermark_logo" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSecurity"
        android:layout_margin="@dimen/layout_margin_40dp"
        style="@style/AppTheme.TextHeader1Medium.12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/c_white_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageWatermarkBottomSmall"
        android:layout_width="@dimen/size_20dp"
        android:layout_height="@dimen/size_10dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_watermark_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageWatermarkTop"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_watermark_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageWatermarkTopSmall"
        android:layout_width="@dimen/size_20dp"
        android:layout_height="@dimen/size_10dp"
        android:layout_margin="@dimen/layout_margin_16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_watermark_logo" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
